packages/frontend/tests/type_errors/type_param_in_variant_struct.nemo
variant Option[a] {
  struct None[a] {}
}
